# CRT-GroundCheck-SSE

./: .dockerignore  .env.example  .gitignore  .sse_cache.json  .sse_multi_cache.json  =1.7.0  ACTIVE_LEARNING_ACHIEVEMENT.md  ACTIVE_LEARNING_STATUS.md  ADAPTER_QUICK_REFERENCE.md  AGENT_PANEL_COMPLETE.md  AI_AGENT_GUIDE.md  AI_SYSTEM_ASSESSMENT.md  AI_round2.code-workspace  ARTIFACT_SCHEMAS.md  ASSERTIVE_RESOLUTION_FIX_SUMMARY.md  ASSERTIVE_RESOLUTION_IMPLEMENTATION.md  ASSESSMENT_LATEST_MERGES_AND_CODE_QUALITY.md  BEFORE_AND_AFTER.md  BETA_LAUNCH_WORKFLOW.md  BETA_READINESS_SUMMARY.md  BETA_READY_TO_SHIP.md  BETA_RELEASE_CHECKLIST.md  BETA_RELEASE_NOTES.md  BETA_RELEASE_SUMMARY.md  BETA_STARTER_KIT.md  BREAKTHROUGH_MOMENT.md  BROWSER_BRIDGE_README.md  BUG_FIX_SUMMARY.md  BUG_FIX_VALIDATION_REPORT.md  BUG_REPORT_TEMPLATE.md  CAVEAT_VIOLATIONS_RESOLVED.md  CHANGES_APPLIED.md  CHAT_LOOP_DIAGNOSIS.md  CODE_REVIEW_CHECKLIST.md  COHERENCE_QUICK_REFERENCE.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_TEST_RESULTS.json  CONTRIBUTING.md  CROSS_THREAD_MEMORY_DESIGN.md  CROSS_THREAD_MEMORY_FIX.md  (+299 more)
.streamlit/: config.toml
adaptive_hard_10x200_v3/: crt_adaptive_stress_batch.latest.json
ai_logs/: basckup-keep-this.md  thu_jan_22_2026_project_assessment_and_next_steps.json  wed_jan_21_2026_project_assessment_and_next_steps.json
artifacts/: CONTRADICTION_FIX_PLAN.md  CONTRADICTION_FIX_SUMMARY.md  TEST_RESULTS_2026-01-27.md  adaptive_stress_report.20260119_190642.md  adaptive_stress_report.20260119_192924.md  adaptive_stress_report.20260119_194353.md  adaptive_stress_report.20260119_195605.md  adaptive_stress_report.20260119_215209.md  adaptive_stress_report.20260119_221208.md  adaptive_stress_report.20260119_232442.md  adaptive_stress_report.20260119_233935.md  adaptive_stress_report.20260119_235757.md  adaptive_stress_report.20260120_032750.md  adaptive_stress_report.20260120_172350.md  adaptive_stress_report.20260120_172425.md  adaptive_stress_report.20260120_221434.md  adaptive_stress_run.20260119_190642.jsonl  adaptive_stress_run.20260119_192924.jsonl  adaptive_stress_run.20260119_194353.jsonl  adaptive_stress_run.20260119_195605.jsonl  adaptive_stress_run.20260119_215209.jsonl  adaptive_stress_run.20260119_221208.jsonl  adaptive_stress_run.20260119_232442.jsonl  adaptive_stress_run.20260119_233935.jsonl  adaptive_stress_run.20260119_235625.jsonl  adaptive_stress_run.20260119_235757.jsonl  (+283 more)
belief_revision/: PHASE2_SUMMARY.md  (+8 more)
groundcheck/: .gitignore  CONTRADICTION_AWARE.md  LICENSE  README.md  pyproject.toml  quick_validation_test.py  requirements.txt  setup.py  stress_test_compounds.py  stress_test_performance.py  stress_test_semantic.py
groundcheck/.github/workflows/: tests.yml
groundcheck/examples/: basic_usage.py  contradiction_demo.py  neural_features_demo.py
groundcheck/groundcheck/: __init__.py  fact_extractor.py  neural_extractor.py  semantic_matcher.py  tuple_verifier.py  types.py  verifier.py
groundcheck/tests/: test_contradiction_aware.py  test_fact_extraction.py  test_neural_extraction.py  test_verifier.py
(+1104 files in other folders)
